[package]
name = "rust_wasm_webserver"
version = "0.1.0"
edition = "2021"
authors = ["Ronald Wildenberg <rwwilden@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytecodec = "0.4.15"
httpcodec = "0.2.3"
wasmedge_wasi_socket = "0.4.2"
